--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.13.3",
+    "dotenv": "^2.0.0",
     "express": "^4.13.3",
     "mongodb": "^2.1.6"
   }
