--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.13.3",
     "dotenv": "^2.0.0",
     "express": "^4.13.3",
-    "mongodb": "^2.1.6"
+    "mongodb": "^2.1.6",
+    "yelp": "^1.0.1"
   }
 }
