--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "body-parser": "^1.13.3",
     "dotenv": "^2.0.0",
     "express": "^4.13.3",
+    "express-session": "^1.14.1",
     "mongodb": "^2.1.6",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "yelp": "^1.0.1"
   }
 }
